--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -145,10 +145,10 @@
 								</ul>
 								<div class="input-box" id="choiceDate" style="display:none;">
 									<label style="margin: 0; padding: 0 10px 0 0px; display: inline-block; font-size: 14px; color: #333; vertical-align: middle;">기간선택</label>
-									<div class="input-cand"><input type="text" class="datepicker" id="dealStrtDt" placeholder="거래 시작 날짜" onchange="setDealEndngDt(this)"/></div>
+									<div class="input-cand"><input type="text" class="datepicker" id="dealStrtDt" placeholder="거래 시작 날짜" onchange="setDealEndngDt()"/></div>
 									<input type="text" class="timepicker" id="dealStrtTime" required>
 									<span class="is-span">~</span> 
-									<div class="input-cand"><input type="text" class="datepicker" id="dealEndngDt" placeholder="거래 종료 날짜"></div>
+									<div class="input-cand"><input type="text" class="datepicker" id="dealEndngDt" placeholder="거래 종료 날짜" onchange="setDealEndngDt()"></div>
 									<input type="text" class="timepicker" id="dealEndngTime" required>
 								</div>
 								<p class="table-p">
@@ -1223,12 +1223,14 @@ jQuery(document).ready(function() {
 	
 	var dealStrtDt = new Date($('#dealStrtDt').val().replaceAll(".", "-"));
 	var maxDealEndngDt = new Date(dealStrtDt);
+	var minDealEndngDt = new Date(dealStrtDt);
 	maxDealEndngDt.setDate(dealStrtDt.getDate() + 21);
+	minDealEndngDt.setDate(dealStrtDt.getDate() + 3);
 	
 	$('#dealEndngDt').datepicker({ 
-		minDate: 0,
+		minDate: minDealEndngDt,
 		maxDate: maxDealEndngDt
-	}).datepicker("setDate", maxDealEndngDt);
+	}).datepicker("setDate", minDealEndngDt);
 	
 	$("#dealStrtDt").calendar($("#dealEndngDt"));
 	
@@ -1261,11 +1263,14 @@ jQuery(document).ready(function() {
 	
 });
 
-function setDealEndngDt(obj){
-	var dealStrtDt = new Date(obj.value.replaceAll(".", "-"));
+function setDealEndngDt(){
+	var dealStrtDt = new Date($("#dealStrtDt").val().replaceAll(".", "-"));
 	var maxDealEndngDt = new Date(dealStrtDt);
+	var minDealEndngDt = new Date(dealStrtDt);
 	maxDealEndngDt.setDate(dealStrtDt.getDate() + 21);
+	minDealEndngDt.setDate(dealStrtDt.getDate() + 3);
 	$('#dealEndngDt').datepicker("option", "maxDate", maxDealEndngDt);	
+	$('#dealEndngDt').datepicker("option", "minDate", minDealEndngDt);	
 }
 
 $("input:radio[name='dealTypCd']").change(function(){
