작가 학력 View List 수정

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -293,8 +293,11 @@ $(function() {
 		artstInfoHtml += '	<dd>';
 		
 		if(eductn.length > 1) {
-			var eductnLength = 2
+			var eductnLength = 2;
+		} else if (eductn.length == 1 ) {
+			var eductnLength = 1;
 		}
+		
 		for(var i=0; i<eductnLength; i++){
 			artstInfoHtml += '		<p>'+ eductn[i].eductnNm +'</p>';
 		}
