--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -1255,7 +1255,7 @@ columns2 figure {
     width: 100%;
 }
 
-.item-body{display: table;position: relative;width: 100%;padding-top: 4.1rem;/* height: 46.5rem; */}
+.item-body{display: table;position: relative;width: 100%;padding-top: 4.1rem;padding-bottom: 4.1rem;/* height: 46.5rem; */}
 .uesr-s{
     display: table-cell;
     vertical-align: top;
@@ -1268,7 +1268,7 @@ columns2 figure {
 .text-s{
     display: table-cell;
     vertical-align: top;
-    padding-top: 1.1rem;
+    /* padding-top: 1.1rem; */
 }
 .text-s h3{
     font-size: 2.2rem;
@@ -1366,9 +1366,12 @@ columns2 figure {
 }
 
 .item-div-img.sale .item-ho2{display:block;}
+/*1006 정영우 추가*/
+.item-div-img.auction .item-ho2{display:block;}
+/*1006 끝 */
 .sale{}
 
-.item-ho2{display:none;position: absolute;width: 100%;text-align: center;/* height: 100%; */z-index: 1;bottom: 0;padding: 23px 0 26px 0;}
+.item-ho2{display:none;position:relative;width: 100%;text-align: center;/* height: 100%; */z-index: 1;bottom: 0;padding: 23px 0 26px 0;}
 .item-ho2:after{content:'';position: absolute;width: 100%;height: 100%;left: 0;bottom: 0;background-color: rgb(0 0 0 / 80%);z-index: -1;}
 .item-ho2 ul{padding-top: 8px;width: 100%;z-index: 2;}
 .item-ho2 ul li{font-size:18px;display: inline-block;color: rgb(255 255 255 / 80%);padding-right: 27px;position: relative;line-height: 1.3;}
