--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -132,6 +132,7 @@
 			                                 <option value="DC">배송완료</option>
 			                                 <option value="PC">구매확정</option>
 			                                 <option value="FB">유찰</option>
+			                                 <option value="ST">거래중지</option>
 			                              </select>
 				                      </div>
 				                      <div class="is-label">
