랜딩페이지 2

--- a/src/main/resources/templates/thymeleaf/fo/landing/1006/index.html
+++ b/src/main/resources/templates/thymeleaf/fo/landing/1006/index.html
@@ -11,8 +11,8 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>딜링아트</title>
-	<link type="text/css" rel="stylesheet" href="resources/landing/1006/common/css/font.css" />
-	<link type="text/css"rel="stylesheet" href="resources/landing/1006/common/css/resources/landing/1006_pc.css">
+	<link type="text/css" rel="stylesheet" href="resources/css/event_css/font.css" />
+	<link type="text/css"rel="stylesheet" href="resources/landing/1006/common/css/common_pc.css">
 	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/landing/1006/common/css/ui_mo.css" />
 	<link type="text/css" media="screen and (min-width: 751px)" rel="stylesheet" href="resources/landing/1006/common/css/ui_pc.css" />
 
@@ -81,8 +81,8 @@
 			<img src="resources/landing/1006/common/img/text_5.png" class="mo-on" style="width:95%; margin:0 auto;">
 		</div>
 		<div class="btn_1">
-			<a href="https://smartstore.naver.com/mansion9official/products/7330458409"><img src="resources/landing/1006/common/img/btn_1.png" class="pc-on"></a>
-			<a href="https://smartstore.naver.com/mansion9official/products/7330458409"><img src="resources/landing/1006/common/img/btn_1.png" class="mo-on" style="width: 80%; margin:0 auto;"></a>
+			<a href="https://smartstore.naver.com/mansion9official/products/7330458409" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="pc-on"></a>
+			<a href="https://smartstore.naver.com/mansion9official/products/7330458409" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="mo-on" style="width: 80%; margin:0 auto;"></a>
 		</div>
 		<div class="text_4">
 			<img src="resources/landing/1006/common/img/text_6.png" class="pc-on">
