--- a/src/main/resources/templates/thymeleaf/fo/landing/1006/index.html
+++ b/src/main/resources/templates/thymeleaf/fo/landing/1006/index.html
@@ -34,7 +34,7 @@
 				<img src="resources/landing/1006/common/img/logo.png">
 			</div>
 			<div class="main_text">
-				<img src="resources/landing/1006/common/img/main_text.png" class="pc-on">
+				<img src="resources/landing/1006/common/img/main_text.png" class="pc-on" style="margin:0 auto;">
 				<img src="resources/landing/1006/common/img/main_text_mo.png" class="mo-on" style="margin:0 auto;">
 			</div>
 			<div class="text_1">
@@ -45,7 +45,7 @@
 	</div>
 	<div class="con">
 		<div class="body-con">
-			<img src="resources/landing/1006/common/img/text_2.png" class="pc-on">
+			<img src="resources/landing/1006/common/img/text_2.png" class="pc-on" style="margin:0 auto;">
 			<img src="resources/landing/1006/common/img/text_2.png" class="mo-on" style="width:410px;">
 		</div>
 		<div class="img_1">
@@ -61,10 +61,10 @@
 		</div>
 		<div style="padding-top:150px;" class="pc-on">
 			<div class="text_2">
-				<img src="resources/landing/1006/common/img/text_4.png">
+				<img src="resources/landing/1006/common/img/text_4.png" style="padding-left: 300px;">
 			</div>
 			<div class="img_2">
-				<img src="resources/landing/1006/common/img/img_2.png">
+				<img src="resources/landing/1006/common/img/img_2.png" style="padding-right: 300px;">
 			</div>
 		</div>
 		<div style="padding-top:10rem;" class="mo-on">
@@ -73,21 +73,30 @@
 			</div>
 		</div>
 		<div class="img_3">
-			<img src="resources/landing/1006/common/img/img_3.png" class="pc-on">
+			<img src="resources/landing/1006/common/img/img_3.png" style="padding-left: 300px;" class="pc-on">
 			<img src="resources/landing/1006/common/img/img_3.png" class="mo-on" style="width:85%;">
 		</div>
 		<div class="text_3">
-			<img src="resources/landing/1006/common/img/text_5.png" class="pc-on">
-			<img src="resources/landing/1006/common/img/text_5.png" class="mo-on" style="width:95%; margin:0 auto;">
+			<img src="resources/landing/1006/common/img/text_5.png" class="pc-on" style="margin:0 auto;">
+			<img src="resources/landing/1006/common/img/text_5.png" class="mo-on" style="width:85%; margin:0 auto;">
 		</div>
 		<div class="btn_1">
-			<a href="https://smartstore.naver.com/mansion9official/products/7330458409" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="pc-on"></a>
-			<a href="https://smartstore.naver.com/mansion9official/products/7330458409" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="mo-on" style="width: 80%; margin:0 auto;"></a>
+			<a href="https://bit.ly/3D4E8xp" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="pc-on" style="margin:0 auto;"></a>
+			<a href="https://bit.ly/3D4E8xp" target="_blank"><img src="resources/landing/1006/common/img/btn_1.png" class="mo-on" style="width: 80%; margin:0 auto;"></a>
 		</div>
 		<div class="text_4">
-			<img src="resources/landing/1006/common/img/text_6.png" class="pc-on">
+			<img src="resources/landing/1006/common/img/text_6.png" class="pc-on" style="margin:0 auto;">
 			<img src="resources/landing/1006/common/img/text_6.png" class="mo-on" style="width:90%; margin:0 auto;">
 		</div>
 	</div>
 </body>
+<script type="text/javascript">
+var isMobile = /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ? true : false;
+jQuery(document).ready(function($){
+     if(!isMobile) {
+        var nowZoom = '80';
+        document.body.style.zoom = nowZoom + "%";
+     }
+});
+</script>
 </html>
