--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy2.html
@@ -384,7 +384,7 @@
 															<thead>
 																<tr>
 																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">일반 운송(편도)</td>
-																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">가격 (vat별도)</td>
+																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">예상 가격 (vat별도)</td>
 																	<td style="background-color:#fbfbfb; text-align:center; font-weight:bold;">비고</td>
 																</tr>
 															</thead>
@@ -392,7 +392,7 @@
 																<tr>
 																	<td>서울특별시</td>
 																	<td>70,000</td>
-																	<td rowspan="11" style="color:#e9625c; font-weight:bold;">포장포함<br/>(운송보험, 컨디션체크 리포트 이용불가)</td>
+																	<td rowspan="11" style="color:#e9625c; font-weight:bold;">포장포함<br/>(운송보험, 컨디션체크 리포트 이용불가)<!-- <br/>우류세에 따라 가격이 변동될 수 있습니다. --></td>
 																</tr>
 																<tr>
 																	<td>경기도 1권역<br/>
@@ -692,8 +692,10 @@
 							</div>
 					
 							<div class="bat-box5">
+							
 								<!-- <a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="call(200)"><span>결제하기</span></a> -->
-								<a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
+								<a href="javascript:void(0);" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
+								<a href="javascript:void(0);" class="ba-btn1" id="btn_dealingCall" style="display:none;" onclick="btn_dealingCall()"><span>딜링콜 요청</span></a>
 								<a href="javascript:history.back();" class="ba-btn2" ><span>돌아가기</span></a>
 								
 							</div>
@@ -747,7 +749,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
 				</div>
 
 			</div>
@@ -823,6 +825,38 @@
 		</div>
 	</div>
 </div>
+
+<!-- 딜링콜요청 -->
+<div class="modal fade modal-s" id="callModal" tabindex="-1" role="dialog" aria-labelledby="callModalLabel" aria-hidden="true" data-backdrop="static" data-keyboard="false">
+	<div class="modal-dialog modal-baeg max-w480">
+		<div class="modal-content">
+			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
+				<!-- <div class="baegs">
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
+				</div> -->
+			</div>
+			<div class="modal-body login-body">
+				<div>
+					<div class="call_box">
+						딜링콜 요청이 완료 되었습니다.
+					</div>
+					<div class="call_box_con1">
+						<li>딜링콜 운송 서비스 안내를 받은 후 결제 페이지가 활성화 되며 이 후 48시간 이내에 결제를 진행해야 합니다.</li>
+						<li>딜링콜을 통해 안내 받은 부가서비스(작업 할증, 설치 등)에 회원님의 요청이 있을 경우 비용이 추가 될 수 있습니다. </li>
+						<li>작품가/운송서비스 미결제, 운송일정조율에 대한 응답거부, 작품운송의 인계 및 수취거부, 미술품 또는 보증서의 허위, 변조, 조작, 딜링아트 서비스 이용약관에 위반되는 행위가 발생되는 경우 거래가 취소 될 수 있습니다. </li>
+						<li>미술품의 소유권은 구매자에게 운송이 완료 되기 전까지 판매자에게 있습니다. </li>
+						<li>해외운송은 불가하며 제주도, 도서산간 지역, 조형작품은 별도문의를 통해 안내해드립니다.</li>
+					</div>
+					
+					<div class="baeg-btn mg_t30">
+						<a href="#"><button type="button" class="baeg-b1" data-dismiss="modal" aria-label="Close">확인</button></a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
 <script th:inline="javascript">
 var result = /*[[${result}]]*/ 'default';
 var fee = 0; //거래 수수료
@@ -899,6 +933,8 @@ jQuery(document).ready(function() {
 		$("#dealSttsCdDetail").text("구매자 배송서비스 선택 중입니다.");
 		$("#dealSttsCdDetail").append("<span>배송서비스 선택</span>"); 
 		$("#1PC").css("display", ""); //2차 결제 div
+		$("#btn_dealingCall").css("display", ""); //딜링콜 요청 버튼
+		
 		//$("#paymethod").css("display", "");
 		//$("#btn_payment").css("display", "");
 		//getCouponList("TD"); //운송 수수료 할인 쿠폰 목록 가져오기
@@ -1055,6 +1091,13 @@ function updateNewAddr(){
             alert("오류 발생" + error);
         }
 	}); 
+}
+/*
+ * 딜링 콜 요청 버튼 클릭시
+ */
+ function btn_dealingCall(){
+	debugger;
+	$("#callModal").modal("show");
 }
 /*
  * 결제 수단 클릭시
