--- a/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myGallery_myCollection.html
@@ -195,7 +195,10 @@ jQuery(document).ready(function() {
 
 function collectionRegMove() {
 	
-	location.href = "/collection_reg";
+	//location.href = "/collection_reg";
+	
+	location.href = '/myWorkListReg';
+	
 	/*
 	modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. 등록하시겠습니까?", 
 	
