딜 메인 컬러 코드 필터 추가 / 어드민 배송 서비스 개발중 / 쿠폰 발급 중지 스케줄러 추가

--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -6624,3 +6624,7 @@ p.dib{display:inline-block !important;}
     margin-bottom: 13px;
     max-height: 60px;
 }
+/* 1025 메인컬러 필터 검색*/
+.color-box label.mc-bold {
+    border:2px solid #000;
+}
