--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -6054,3 +6054,7 @@ position: relative;background-color: #fbfbfb;}
     margin-bottom: 13px;
     max-height: 60px;
 }
+/* 1025 메인컬러 필터 검색*/
+.color-box label.mc-bold {
+    border:2px solid #000;
+}
