--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -592,9 +592,10 @@ jQuery(document).ready(function() {
 	if(result.dealInfo.sellPaymntSttsCd == "2PW" && result.dealInfo.dealSttsCd == "TC"){ //판매자 결제 미완료면
 		$("#dealSttsCdDetail").text("판매자 결제를 대기중입니다.");
 		$("#dealSttsCdDetail").append("<span>결제 대기</span>"); 
-		$("#2PW").css("display", ""); //판매자 결제 div
-		$("#paymethod").css("display", ""); 
-		$("#btn_payment").css("display", "");
+		modalAlertShow("현재 2차 결제 시스템 변경 작업중입니다. 2차 결제는 1533-3024로 문의주세요.");
+		//$("#2PW").css("display", ""); //판매자 결제 div
+		//$("#paymethod").css("display", ""); 
+		//$("#btn_payment").css("display", "");
 		getCouponList("TD");; //운송 수수료 할인 쿠폰 목록 가져오기
 		if(result.vacctInfo.payMethod != null){
 			$("#VACCT").css("display", "");
